# om-fast-parser

./: Cargo.toml
assets/: veneno.osu
benches/: parser_benchmark.rs
examples/: basic_usage.rs  minacalc.rs
src/: helpers.rs  lib.rs  main.rs  service.rs  structs.rs
tests/: minacalc.rs
