[package]
name = "super_fast_parser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "super_fast_parser"


[dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
debug = false
strip = "symbols"

[profile.release.build-override]
opt-level = 3
codegen-units = 1
