[package]
name = "om_fast_parser_bin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "om_fast_parser"

[dependencies]

[dev-dependencies]
minacalc-rs = "0.1"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "parser_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
debug = false
strip = "symbols"

[profile.release.build-override]
opt-level = 3
